fix the hidden overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ section {
 	padding: 7em 0em;
 	color: #E9F2FA;
 	text-align: center;
-	height: 70vh;
+	min-height: 70vh;
 }
 
 .top h1, .top h4 {
@@ -25,7 +25,7 @@ section {
 	text-align: center;
 	padding: 0;
 	padding: 7em 0em;
-	height: 70vh;
+	min-height: 70vh;
 }
 
 .top2 img {
@@ -44,14 +44,14 @@ section {
 
 @media only screen and (min-width: 1500px) {
 	.top, top2 {
-		height: 90vh;
+		min-height: 90vh;
 		padding: 10em 0em;
 	}
 }
 
 @media only screen and (max-width: 800px) {
 	.top, .top2 {
-		height: 70vh;
+		min-height: 70vh;
 		padding: 10em 0em;
 	}
 	
@@ -63,7 +63,7 @@ section {
 
 @media only screen and (max-width: 400px) {
 	.top {
-		height: 80vh;
+		min-height: 80vh;
 		padding: 15em 0em;
 	}
 }
